# API-Escola-FastAPI-MySQL

./: .env  README.md  main.py  pyproject.toml
