[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
